fix: altair overflow styling

--- a/frontend/src/plugins/impl/vega/vega.css
+++ b/frontend/src/plugins/impl/vega/vega.css
@@ -4,6 +4,10 @@
   flex: 1;
 }
 
+.vega-embed > .chart-wrapper {
+  overflow-x: auto;
+}
+
 /* This may have bad performance, but it's the only way I can get the vega chart to fill the space. */
 div:has(> marimo-ui-element > marimo-vega) {
   display: block !important;
